# EVD_Proj

./: .gitignore  .pre-commit-config.yaml  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  fb  test
application/: CMakeLists.txt  main.cpp  rpi_hq_cam.cfg
application/AidController/: CMakeLists.txt
application/AidController/include/: ActiveSubStates.hpp  Context.hpp  Controller.hpp  IActiveSubState.hpp  IState.hpp  States.hpp
application/AidController/src/: ActiveSubStates.cpp  Context.cpp  Controller.cpp  States.cpp  test.cpp
application/Detector/: CMakeLists.txt
application/Detector/BallDetector/: CMakeLists.txt
application/Detector/BallDetector/include/: BallAcquisition.hpp  BallDetector.hpp  BallEnhancement.hpp  BallFeatureExtraction.hpp  BallObject.hpp  BallSegmentation.hpp  IImageProcessing.hpp
application/Detector/BallDetector/src/: BallAcquisition.cpp  BallDetector.cpp  BallDetectorTest.cpp  BallEnhancement.cpp  BallFeatureExtraction.cpp  BallSegmentation.cpp
application/Detector/common/include/: IDetector.hpp  Object.hpp
application/Detector/include/: Acquisition.hpp  BoundaryDetector.hpp  BoundaryEnhancement.hpp  BoundaryFeatureExtract.hpp  BoundarySegmentation.hpp  IDetector.hpp  IImageProcessing.hpp  MockAcquisition.hpp
application/Detector/include/Ball/: BallClassification.hpp  BallDetector.hpp  BallEnhancement.hpp  BallFeatureExtraction.hpp  BallSegmentation.hpp
application/Detector/include/Boundary/: BoundaryClassifier.hpp  BoundaryDetector.hpp  BoundaryEnhancement.hpp  BoundaryFeatureExtract.hpp  BoundarySegmentation.hpp
application/Detector/include/Change/: ChangeClassification.hpp  ChangeDetector.hpp  ChangeEnhancement.hpp  ChangeFeatureExtraction.hpp  ChangeSegmentation.hpp
application/Detector/include/Configure/: BallConfDetector.hpp  BallConfEnhancement.hpp  BallConfFeatureExtraction.hpp  BallConfSegmentation.hpp  Configuration.hpp  CueConfDetector.hpp  CueConfEnhancement.hpp  CueConfFeatureExtraction.hpp  CueConfSegmentation.hpp  TableConfDetector.hpp  TableConfEnhancement.hpp  TableConfFeatureExtraction.hpp  TableConfSegmentation.hpp
application/Detector/include/Cue/: CueDetector.hpp  CueProcessing.hpp
application/Detector/src/: Acquisition.cpp  BallClassification.cpp  BallConfDetector.cpp  BallConfEnhancement.cpp  BallConfFeatureExtraction.cpp  BallConfSegmentation.cpp  BallDetector.cpp  BallDetectorTest.cpp  BallEnhancement.cpp  BallFeatureExtraction.cpp  BallSegmentation.cpp  BoundaryClassifier.cpp  BoundaryDetector.cpp  BoundaryEnhancement.cpp  BoundaryFeatureExtract.cpp  BoundarySegmentation.cpp  ChangeClassification.cpp  ChangeDetector.cpp  ChangeEnhancement.cpp  ChangeFeatureExtraction.cpp  ChangeSegmentation.cpp  Configuration.cpp  CueClassification.cpp  CueConfDetector.cpp  CueConfEnhancement.cpp  CueConfFeatureExtraction.cpp  CueConfSegmentation.cpp  CueDetector.cpp  CueEnhancement.cpp  CueFeatureExtraction.cpp  CueSegmentation.cpp  MockAcquisition.cpp  TableConfDetector.cpp  TableConfEnhancement.cpp  TableConfFeatureExtraction.cpp  TableConfSegmentation.cpp  TableConfTest.cpp  test.cpp
application/ImageCapture/: CMakeLists.txt
application/ImageCapture/include/: CameraConfig.hpp  Capture.hpp  ICapture.hpp  MockCapture.hpp
application/ImageCapture/src/: CameraConfig.cpp  Capture.cpp  MockCapture.cpp  test.cpp
application/ImageDrawer/: CMakeLists.txt
application/ImageDrawer/include/: CairoDrawer.hpp  DebugDrawer.hpp  IImageDrawer.hpp  VsyncCairoDrawer.hpp
application/ImageDrawer/src/: CairoDrawer.cpp  DebugDrawer.cpp  VsyncCairoDrawer.cpp  test.cpp
application/TrajectoryCalculator/: CMakeLists.txt
application/TrajectoryCalculator/include/: ITrajectory.hpp  TrajectoryCalculator.hpp
application/TrajectoryCalculator/src/: TrajectoryCalculator.cpp  test.cpp
application/UserInterface/: CMakeLists.txt
application/UserInterface/include/: IUserInterface.hpp  KeyboardInterface.hpp
application/UserInterface/src/: KeyboardInterface.cpp  test.cpp
application/Visualizer/: CMakeLists.txt
application/Visualizer/include/: IVisual.hpp  ObjectVisualizer.hpp
application/Visualizer/src/: ObjectVisualizer.cpp  test.cpp
diagrams/: BallDetector_classDiagram.plantuml  BallDetector_sequenceDiagram.plantuml  ChangeDetector_classDiagram.plantuml  ChangeDetector_sequenceDiagram.plantuml  Configuring_classDiagram.plantuml  class_aidcontroller.plantuml  class_boundary_detector.plantuml  class_imagecapture.plantuml  class_imagedrawer.plantuml  class_trajectory.plantuml  class_userinterface.plantuml  class_visualizer.plantuml  component.plantuml  controller_state_diagram.plantuml  deployment.plantuml  design_class_diagram_boundary_detector.plantuml  design_class_diagram_cue_detection.plantuml  domain.plantuml  sequence_boundary_detector.plantuml  sequence_cue_detector.plantuml  sequence_imagecapture.plantuml  sequence_imagedrawer.plantuml  sequence_trajectory.plantuml  sequence_userinterface.plantuml  sequence_visualizer.plantuml  use_cases.plantuml
example_imgs/: viewing_angle_examp.xcf
prototypes/CueDetection/: cuedetector.cpp  cuedetector.hpp  main.cpp
prototypes/Pool_boundary_detection/: CMakeLists.txt  boundarydetector.cpp  boundarydetector.hpp  main.cpp
prototypes/calibration/: calibration.py  empty_table.h264  videooverwrite.py
prototypes/camera_setup/: cam_pos.xcf
prototypes/cue_ball_detection/: README.md  config.py  cue_ball_classification.py  cue_ball_detection_with_trackbar.py  cue_ball_feature_extraction.py  cue_ball_preprocessing.py  cue_ball_processing_train.py  cue_ball_segmentation.py  hough_circles_parameter_with_trackbar.py  show_warp_image.py
prototypes/difference_detection/: difference_detection.py
prototypes/trajectory/: trajectory.py  trajectory_multiple.py
prototypes/visualization/cairo/: CMakeLists.txt  main.c
prototypes/visualization/framebuffer/: CMakeLists.txt  main.c  main.cpp
prototypes/visualization/opengl/: CMakeLists.txt  main.c
test_fb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fb  functions.h  main.c
